# PakCato

./: .gitignore  README.md  demo.ipynb  main.ipynb  main.py  pyproject.toml
settings/: category_keywords.toml  component_testset.toml  test_examples
src/: github_helper.py  model.py  pypi_helper.py  utils.py
